[package]
edition = "2021"
name = "wz"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "*"
byteorder = "*"
indexmap = "2.6.0"
inflate = "*"
log = "*"
simple_logger = "*"
squish = "2.0.0-beta1"

[dev-dependencies]
eframe = "0.29.1"
egui_extras = "0.29.1"
indexmap = {version = "2.6.0", features = ["serde"]}
rfd = "0.15.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
