[package]
edition = "2021"
name = "wz"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "*"
byteorder = "*"
indexmap = { version = "2.6.0", features = ["serde"] }
inflate = "*"
log = "*"
simple_logger = "*"
squish = "2.0.0-beta1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
itertools = "0.13.0"
rfd = "0.15.0"
